crates/cistell-core/tests/ui/missing_prefix.stderr
error: #[config(prefix = "...")] is required on the struct
 --> tests/ui/missing_prefix.rs:4:1
  |
4 | #[config(group = "redis")]
  | ^
